--- a/style.css
+++ b/style.css
@@ -70,12 +70,12 @@
 }
 
 .card.servicesText, .card:hover .servicesIcon .btn.btn-success:hover{
-    transition: background-color 0.6s ease, color 0.6s ease; /* Плавный переход цвета в течение 0.3 секунды */
+    transition: background-color 0.6s ease, color 0.6s ease;
 }
 
 .card.servicesText:hover {
-    background-color: blue; /* Измени цвет на тот, который тебе нужен */
-    color: white; /* Цвет текста при наведении */
+    background-color: blue;
+    color: white;
 }
 
 
@@ -111,13 +111,13 @@
 
 .btn.btn-success,
 .btn.btn-success:hover {
-    background-color: hsl(224, 80%, 48%); /* Используй !important, чтобы переопределить стили Bootstrap */
-    border-color: hsl(224, 80%, 48%); /* Используй !important, если нужно переопределить цвет рамки кнопки */
-    color: white; /* Цвет текста при наведении */
+    background-color: hsl(224, 80%, 48%); 
+    border-color: hsl(224, 80%, 48%);
+    color: white;
 }
 
-/* Изменение цвета кнопки btn-success при наведении */
+
 .btn.btn-success:hover {
-    background-color: darkblue ; /* Используй !important, чтобы переопределить стили Bootstrap при наведении */
-    border-color: darkblue ; /* Используй !important, если нужно переопределить цвет рамки кнопки при наведении */
+    background-color: darkblue ;
+    border-color: darkblue ;
 }
